src/test/ui/parser/where_with_bound.stderr
error: generic parameters on `where` clauses are reserved for future use
  --> $DIR/where_with_bound.rs:3:19
   |
LL | fn foo<T>() where <T>::Item: ToString, T: Iterator { }
   |                   ^^^

error: aborting due to previous error

